# rust-frontend-playground

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  rust-toolchain.toml
fars/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
fars/src/: api.rs  config.rs  data.rs  error.rs  lib.rs  session.rs
fars/src/api/: change_email.rs  change_password.rs  confirm_email_verification.rs  confirm_password_reset.rs  delete_account.rs  exchange_custom_token_for_an_id_and_refresh_token.rs  exchange_refresh_token.rs  fetch_providers_for_email.rs  get_user_data.rs  link_with_email_password.rs  link_with_oauth_credential.rs  send_email_verification.rs  send_password_reset_email.rs  sign_in_anonymously.rs  sign_in_with_email_password.rs  sign_in_with_oauth_credential.rs  sign_up_with_email_password.rs  unlink_provider.rs  update_profile.rs  verify_password_reset_code.rs
firebase-auth-rs/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
firebase-auth-rs/src/: api.rs  auth.rs  client.rs  config.rs  data.rs  error.rs  lib.rs  result.rs  session.rs
firebase-auth-rs/src/api/: change_email.rs  change_password.rs  confirm_email_verification.rs  confirm_password_reset.rs  delete_account.rs  exchange_custom_token_for_an_id_and_refresh_token.rs  exchange_refresh_token.rs  fetch_providers_for_email.rs  get_user_data.rs  link_with_email_password.rs  link_with_oauth_credential.rs  send_email_verification.rs  send_password_reset_email.rs  sign_in_anonymously.rs  sign_in_with_email_password.rs  sign_in_with_oauth_credential.rs  sign_up_with_email_password.rs  unlink_provider.rs  update_profile.rs  verify_password_reset_code.rs
firebase-auth-rs/src/data/: idp_post_body.rs  provider_id.rs  provider_user_info.rs  user_data.rs
firebase-rust/: Cargo.toml  README.md
firebase-rust/src/: auth.rs  lib.rs
firebase-rust/src/auth/: auth_result.rs  change_email.rs  change_password.rs  client.rs  confirm_password_reset.rs  delete_account.rs  exchange_refresh_token.rs  get_user_data.rs  provider_user_info.rs  result.rs  send_email_verification.rs  send_password_reset_email.rs  sign_in_with_email_password.rs  sign_up_with_email_password.rs  verify_password_reset_code.rs
google-oauth-rs/: Cargo.toml  README.md
google-oauth-rs/src/: api.rs  error.rs  lib.rs  result.rs
google-oauth-rs/src/api/: exchange_access_token.rs  redirect_auth_server.rs  request_authorization.rs
src/: application_context.rs  auth.rs  auth_context.rs  build.rs  error.rs  firebase.rs  generated.rs  logging.rs  main.rs  routings.rs  sign_up.rs  signup.rs  style.css  style.rs
src/auth/: auth_context.rs  delete_account.rs  get_user_data.rs  send_email_verification.rs  send_reset_password_email.rs  sign_in.rs  sign_up.rs  update_user_info.rs
src/firebase/: auth.rs  auth_result.rs
src/routings/: dashboard.rs  home.rs  not_found.rs  oauth_google.rs  reset_password.rs  route.rs  sign_in.rs  sign_in_anonymously.rs  sign_in_oauth.rs  sign_up.rs
