[package]
name = "rust-frontend-playground"
version = "0.1.0"
edition = "2021"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
license = "MIT"
readme = "README.md"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dioxus = { version = "0.4.0", features = ["html"] }
dioxus-logger = { version = "0.4.1", features = ["timestamps"] }
dioxus-web = "0.4.0"
log = "0.4.20"
material-dioxus = { version = "0.0.3-dev", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[build-dependencies]
anyhow = "1.0.75"
