[package]
name = "rust-frontend-playground"
version = "0.1.0"
edition = "2021"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
license = "MIT"
readme = "README.md"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dioxus = { version = "0.4.0", features = ["html"] }
dioxus-logger = { version = "0.4.1", features = ["timestamps"] }
dioxus-router = "0.4.1"
dioxus-web = "0.4.0"
log = "0.4.20"
material-dioxus = { version = "0.0.3-dev", features = ["full"] }
firebase-auth-rs = { path = "firebase-auth-rs" }
google-oauth-rs = { path = "google-oauth-rs" }
reqwest = "0.11.22"
thiserror = "1.0.51"
regex = "1.10.2"

[build-dependencies]
anyhow = "1.0.75"
