[package]
name = "rust-frontend-playground"
version = "0.1.0"
edition = "2021"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
license = "MIT"
readme = "README.md"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dioxus = { version = "0.4.3", features = ["html"] }
dioxus-logger = { version = "0.4.1", features = ["timestamps"] }
dioxus-router = "0.4.3"
dioxus-web = "0.4.3"
log = "0.4.20"
material-dioxus = { version = "0.0.3-dev", features = ["full"] }
fars = { path = "fars" }
google-oauth-rs = { path = "google-oauth-rs" }
reqwest = "0.11.22"
thiserror = "1.0.51"
regex = "1.10.2"
web-sys = "0.3.66"
async-std = "1.12.0"

[build-dependencies]
anyhow = "1.0.75"
