[package]
name = "firebase-auth-rs"
version = "0.1.0"
edition = "2021"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
license = "MIT"
readme = "README.md"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.*", features = ["json"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
thiserror = "1.0.*"
